[package]
name = "movie-torrent-renamer"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
description = "Renames torrented movies"
repository = "https://github.com/redstonerti/movie-torrent-renamer"
authors = ["George Fitikides <redstonergm@gmail.com>"]

[dependencies]
native-dialog = { version = "0.7.0", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
colored = "2.2.0"
crossterm = "0.28.1"
dialoguer = "0.11.0"
directories = "5.0.1"
